started adding spring boot for backend and added github api to fetch public repositories to populate projects page.

--- a/html/timeline.html
+++ b/html/timeline.html
@@ -5,8 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>DevPortfolio</title>
     <link rel="stylesheet" href="/style/main.css" />
-    <link rel="stylesheet" href="/style/projects.css" />
-    <link rel="stylesheet" href="/style/projects-menu.css" />
   </head>
   <body>
     <div class="horizontal-nav">
@@ -18,7 +16,7 @@
             </a>
           </li>
           <li>
-            <a href="projects.html" id="projects" class="nav-link">
+            <a href="projects.html" class="nav-link">
               <img src="/assets/project-20px-svgrepo-com.svg" alt="" />
             </a>
           </li>
@@ -30,17 +28,6 @@
         </ul>
       </nav>
     </div>
-    <main>
-      <div class="projects">
-        <h1>Most Watched</h1>
-        <div class="mostWatched"></div>
-        <h1>Newest</h1>
-        <div class="newest"></div>
-        <h1>All</h1>
-        <div class="all"></div>
-      </div>
-    </main>
     <script src="/scripts/main.js"></script>
-    <script src="/scripts/projects.js"></script>
   </body>
 </html>
