--- a/html/timeline.html
+++ b/html/timeline.html
@@ -29,5 +29,6 @@
       </nav>
     </div>
     <script src="/scripts/main.js"></script>
+    <script src="/scripts/timeline.js"></script>
   </body>
 </html>
