moved all static content into spring boot static, set up SecurityConfig.java and AuthController.java.

--- a/backend/src/main/resources/static/html/projects.html
+++ b/backend/src/main/resources/static/html/projects.html
@@ -6,30 +6,9 @@
     <title>DevPortfolio</title>
     <link rel="stylesheet" href="/style/main.css" />
     <link rel="stylesheet" href="/style/projects.css" />
-    <link rel="stylesheet" href="/style/projects-menu.css" />
   </head>
   <body>
-    <div class="horizontal-nav">
-      <nav>
-        <ul>
-          <li>
-            <a href="index.html" class="nav-link">
-              <h1>H</h1>
-            </a>
-          </li>
-          <li>
-            <a href="projects.html" id="projects" class="nav-link">
-              <img src="/assets/project-20px-svgrepo-com.svg" alt="" />
-            </a>
-          </li>
-          <li>
-            <a href="timeline.html" class="nav-link">
-              <img src="/assets/roadmap-timeline-svgrepo-com.svg" alt="" />
-            </a>
-          </li>
-        </ul>
-      </nav>
-    </div>
+    <div id="horizontal-nav"></div>
     <main>
       <div class="projects">
         <h1>Most Watched</h1>
