Added: admin login and admin context-menu, ready for timeline event edit/add

--- a/backend/src/main/resources/static/html/nav.html
+++ b/backend/src/main/resources/static/html/nav.html
@@ -11,19 +11,22 @@
             </a>
         </li>
         <li>
-            <a href="/html/timeline.html" class="nav-link">
+            <a href="/html/timeline.html" class="nav-link" id="timeline-nav">
                 <img src="/assets/roadmap-timeline-svgrepo-com.svg" alt="" />
             </a>
         </li>
     </ul>
-    <div class="timeLineContextWindow hidden">
+    <div id="timeLineContextMenu" class="hidden">
         <ul>
-            <li>
+            <li class="contextMenuOption">
+                <img src="/assets/edit.svg" alt="">
                 <p>Edit timeline</p>
             </li>
-            <li>
+            <li class="contextMenuOption">
+                <img src="/assets/pluss.svg" alt="">
                 <p>Add event</p>
             </li>
         </ul>
     </div>
+    <img id="admin-toggle" src="/assets/admin.svg" alt="Login">
 </nav>
