--- a/backend/src/main/resources/static/html/timeline.html
+++ b/backend/src/main/resources/static/html/timeline.html
@@ -8,6 +8,11 @@
   </head>
   <body>
     <div id="horizontal-nav"></div>
+    <main>
+      <div class="addTimelineEvent">
+
+      </div>
+    </main>
     <script src="/scripts/main.js"></script>
     <script src="/scripts/timeline.js"></script>
   </body>
