finished add event ui, set up fetch post, prepared backend to update db.

--- a/backend/src/main/resources/static/html/nav.html
+++ b/backend/src/main/resources/static/html/nav.html
@@ -22,7 +22,7 @@
                 <img src="/assets/edit.svg" alt="">
                 <p>Edit timeline</p>
             </li>
-            <li class="contextMenuOption">
+            <li class="contextMenuOption" id="addOpt">
                 <img src="/assets/pluss.svg" alt="">
                 <p>Add event</p>
             </li>
