--- a/backend/src/main/resources/static/html/timeline.html
+++ b/backend/src/main/resources/static/html/timeline.html
@@ -10,14 +10,28 @@
 <body>
 <div id="horizontal-nav"></div>
 <main>
+    <div id="timeline-container">
+        <div id="timeline-events">
+        </div>
+    </div>
+    <div id="timeline-content-display">
+    </div>
+    <!-- Add event logic: -->
     <div class="addTimelineEvent">
         <button class="close-btn" aria-label="Close">×</button>
         <form id="add-event-form">
             <div class="form-group">
+                <label for="eventName"></label>
                 <input type="text" id="eventName" name="eventName" placeholder="Event name" required>
             </div>
             <div class="form-group">
+                <label for="eventDescription"></label>
                 <textarea id="eventDescription" name="eventDescription" rows="4" placeholder="Event description"></textarea>
+            </div>
+            <div class="form-group" id="importance-group">
+                <label for="importance"><p>Importance</p></label>
+                <input id="importance" name="importance" type="range" min="1" max="5" value="1" >
+                <div id="thumb-label">1</div>
             </div>
             <div class="form-group">
                 <p>Start date</p>
